k8s/feedback-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feedback-service
  template:
    metadata:
      labels:
        app: feedback-service
    spec:
      containers:
      - name: feedback-service
        image: <AWS_ECR_URI>/feedback-service:latest
        ports:
        - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: feedback-service
spec:
  selector:
    app: feedback-service
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
  type: ClusterIP
